2008-02-06  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_next_tab, avt_last_tab)
	  (avt_clear_tab_stops, avt_set_tab):
	  new functions

	* avatar.c (avt_next_tab, avt_reset_tab_stops):
	new tab handling

	* avatarsay.c (check_config_file):
	new function
	config file: /etc/avatarsay

	* akfavatar.h, avatar.c (avt_activate_cursor):
	new function
	support for text-cursor

	* akfavatar.h, avatar.c (avt_set_origin_mode, avt_get_origin_mode):
	new functions

	* avatar.c (avt_initialize):
	enable key repeat mode

	* akfavatar.h, avatar.c (avt_clear_bol, avt_clear_line):
	(avt_clear_up, avt_clear_down):
	new functions

	* avatar.c (avt_put_character):
	interprets cariage return

	* akfavatar.h, avatar.c (avt_put_character, avt_mb_encode):
	new functions

	* avatarsay.c:
	ability to run lineoriented programs (not for Windows)
	program has a main menu now
	code cleanups and reorganizations
	fix: rawmode (fixes bug #21889)
	(checkoptions): sanity checks
	(execute_process): no blocking, while program outputs nothing

	* akfavatar.h:
	renamed macros to always use the AVT_ prefix
	new type avt_boolean_t

	* avatar.c (avt_init_SDL):
	new function

	* avatar.c:
	more runtime checks

	* akfavatar.h, avatar.c (avt_set_background_color):
	can be called after initialisation

	* akfavatar.h, avatar.c (avt_initialized):
	new function

	* avatar.c (avt_wait_button, avt_wait_key):
	show mouse pointer while waiting for a key (or mouse button)	

        * avatar.c (avt_quit)
          avatar-audio.c (avt_initialize_audio, avt_quit_audio):
        avt_quit automatically calls avt_quit_audio if appropriete          

	* avatar.c (avt_analyze_event):
	Ctrl + Q also sets AVATARQUIT event

	* avatar.c (avt_mb_encoding):
	get internal WCHAR_ENCODING purely from preprocessor definitions

	* akfavatar.h:
	remove keyword "extern" from prototypes (just a cosmetic change)

	* akfavatar.h, avatar.c (avt_switch_mode):
	new function

	* avatar.c (avt_toggle_fullscreen):